<resources>
    <string name="app_name">LFSA</string>
    <string name="full_app_name">Lasallian FoodSquare App</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_link_to_login"> I have already registered!</string>
    <string name="txt_firstname">First Name</string>
    <string name="txt_lastname">Last Name</string>
    <string name="search_text">Search...</string>
    <string name="typeOfAccount_prompt">Please choose one</string>
    <string-array name="typeOfAccount_arrays">
        <item>Customer</item>
        <item>Food Stall Crew</item>
    </string-array>
    <string name="txt_typeofacc">Type of Account</string>
    <string name="txt_verifyacc">Verify Account</string>
    <string name="txt_almostThere">Almost there!</string>
    <string name="verify">To start using LFSA, we need to verify first your email</string>
    <string name="btn_sendVerification">Send Verification email</string>
    <string name="btn_proceedToLFSA">Proceed to LOGIN</string>
    <string name="txt_diplayemail">EMAIL: </string>
    <string name="txt_displaystatus">VERIFIED: </string>
    <string name="txt_resetpass">Reset Password </string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please type your registered Email Address to send you instructions on how to reset your password</string>
    <string name="txt_editprof">Edit Profile </string>
    <string name="btn_editprof">Save </string>
    <string name="lbl_editprof">Please type your new display name </string>
    <string name="tv_rating_weHope">We hope you enjoyed your meal with us today </string>
    <string name="tv_rating_youNeed">You must complete an LFSA transaction first before you can write a review! :) </string>
    <string name="tv_rating_indicator">Awesome. I love it!</string>
    <string name="et_rating_Title">Tell us what you loved </string>
    <string name="et_rating_tellUs">Title </string>
    <string name="review_word">Reviews </string>
    <string name="comment">"Comments" </string>
    <string name="noteToCrew">"Note to Crew (optional)" </string>
    <string name="email">email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Sign up here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="email_id">Email ID</string>
    <string name="for_customer">For Customers</string>
    <string name="tv_date">Date</string>
    <string name="tv_place">Place of Delivery (optional)</string>
    <string name="tv_quantity">Quantity</string>
    <string name="lbl_bulkorder">BULK ORDER</string>
    <string name="lbl_dialog">Enter the number of orders</string>
    <string name="btn_submit">Verify Order</string>
    <string name="btn_addfoodtomenu">Add Food to Menu</string>
    <string name="btn_vieworder">View Open Orders</string>
    <string-array name="category">
        <item>Rice Meals</item>
        <item>Snacks</item>
        <item>Drinks</item>
        <item>Others</item>
    </string-array>
    <string-array name="subjects_Customer">
        <item>Report A User/Food Stall</item>
        <item>Report An Error/Bug</item>
        <item>Comments/Suggestions</item>
        <item>Others</item>
    </string-array>
    <string name="txt_termsAndCondition_word">LASALLIAN FOOD SQUARE APP \n TERMS AND CONDITIONS</string>
    <string name="userNameWarning">*We recommend you to use your REAL FIRST NAME AND LAST NAME as these will serve as your username and CANNOT BE CHANGED later.</string>
    <string name="login_terms_and_condition">By using this application, you confirm \n that you have read, understood and accept our </string>
    <string name="login_terms_and_condition_word"><u>Terms and Conditions. </u></string>
</resources>