<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivities.VerifyAccount">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/lfsa_logo_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="155dp"
            android:layout_height="132dp"
            android:layout_marginTop="-50dp"
            app:srcCompat="@drawable/lfsa_icon_no_bg"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/txt_almost_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/txt_almostThere"
            android:textColor="#3b3838"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txt_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textSize="18dp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="15dp"/>



        <TextView
            android:id="@+id/txt_email"
            android:text="@string/txt_diplayemail"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0080ff"
            android:gravity="center"/>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_sendVerification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_no_border"
            android:text="@string/btn_sendVerification"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_proceedToLOGIN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_with_border"
            android:text="@string/btn_proceedToLFSA"
            android:textColor="#fff" />

        <!-- Link to Login Screen -->


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"/>


</RelativeLayout>