<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lfsa.Activities.LoginActivities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/foodsquare_"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="155dp"
            android:layout_height="132dp"
            android:layout_marginTop="-20dp"
            app:srcCompat="@drawable/lfsa_logo_nobg" />

        <TextView
            android:id="@+id/app_name_display3_for_customers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:hint="@string/for_customer"
            android:textColorHint="#fff"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_login_email"
            android:drawablePadding="8dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:textColor="#000"
            android:textColorHint="#A9A9A9"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_login_password"
            android:drawablePadding="8dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:textColor="#000"
            android:textColorHint="#a9a9a9"
            android:textStyle="italic" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_button_no_border"
            android:text="@string/btn_login"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_Crew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_button_with_border"
            android:text="@string/btn_loginAsCrew"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_terms_and_condition"
            android:textColor="#fffff5"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="termsAndConditionTextClicked"
            android:text="@string/login_terms_and_condition_word"
            android:textColor="#3333FF"
            android:textSize="16dp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="71dp"
        android:layout_height="97dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="211dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/colorPrimary"/>

</RelativeLayout>
