<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lfsa.Activities.LoginActivities.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/foodsquare_"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="161dp"
            android:layout_height="75dp"
            android:layout_marginTop="-5dp"
            app:srcCompat="@drawable/lfsa_logo_nobg" />

        <EditText
            android:id="@+id/txt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_signup_firstname"
            android:drawablePadding="8dp"
            android:hint="@string/txt_firstname"
            android:textColorHint="#A9A9A9"
            android:inputType="textEmailAddress"
            android:paddingBottom="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_signup_firstname"
            android:drawablePadding="8dp"
            android:hint="@string/txt_lastname"
            android:textColorHint="#A9A9A9"
            android:inputType="textEmailAddress"
            android:paddingBottom="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_login_email"
            android:drawablePadding="8dp"
            android:hint="@string/hint_email"
            android:textColorHint="#A9A9A9"
            android:inputType="textEmailAddress"
            android:paddingBottom="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_signup_confirm_password"
            android:drawablePadding="8dp"
            android:hint="@string/hint_password"
            android:textColorHint="#A9A9A9"
            android:inputType="textPassword"
            android:paddingBottom="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_login_password"
            android:drawablePadding="8dp"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="#A9A9A9"
            android:inputType="textPassword"
            android:paddingBottom="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <!-- Login Button -->

        <TextView
            android:id="@+id/txt_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userNameWarning"
            android:textColor="#f5f5f5"
            android:textSize="11sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_button_no_border"
            android:text="@string/action_sign_in_short"
            android:textColor="#f5f5f5" />

        <Button
            android:id="@+id/btn_already_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />


        <!-- Link to Login Screen -->
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/login_terms_and_condition"
            android:textColor="#f5f5f5"
            android:textSize="12dp"
            android:translationY="-12dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="termsAndConditionTextClicked"
            android:text="@string/login_terms_and_condition_word"
            android:textColor="#3333FF"
            android:textSize="14dp"
            android:translationY="-15dp" />


    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="86dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/colorPrimary"/>

</RelativeLayout>
