<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/lfsa_logo_background"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="149dp"
            android:layout_height="109dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/lfsa_icon_no_bg" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_rating_youNeed"
            android:textSize="18dp"
            android:textStyle="italic"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/ratingBar"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvRatingScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:text="@string/tv_rating_indicator"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#333333"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvRatingScale"
            android:enabled="false"
            android:gravity="top"
            android:hint="@string/et_rating_tellUs"
            android:textColorHint="#A9A9A9"
            android:textColor="#000"
            android:inputType="textMultiLine"
            android:lines="1"
            android:background="@drawable/background_input"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etTitle"
            android:enabled="false"
            android:gravity="top"
            android:hint="@string/et_rating_Title"
            android:lines="4"
            android:background="@drawable/background_border"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:layout_marginTop="8dp"
            android:maxLength="140"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_button_no_border"
            android:enabled="false"
            android:text="Send feedback"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>



</RelativeLayout>